# llm-inference-lab

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: benchmarks.yaml  engines.yaml  models.yaml  runpod_gpus.yaml
docs/: EXPERIMENT_DESIGN.md  H200_LONG_CONTEXT_RUNBOOK.md  RUNPOD_A100_RUNBOOK.md  TROUBLESHOOTING.md
experiment_runs/a100-20260628T202440Z/: BENCHMARK_MANIFEST.md  nvidia_smi_final.txt  nvidia_smi_preflight.txt  package_versions.txt  package_versions_post_sglang.txt  run_notes.txt
experiment_runs/a100-20260628T202440Z/analysis/: agent_metrics.csv  agent_step_metrics.csv  analysis_report.md  concurrency_metrics.csv  dashboard.html  engine_comparison.csv  gpu_snapshots.csv  scaling_metrics.csv  summary_metrics.csv  workload_metrics.csv
experiment_runs/a100-20260628T202440Z/reports/: concurrency_summary.csv  hardware_recommendation_sglang_qwen14b_official.md  hardware_recommendation_sglang_qwen4b_official.md  hardware_recommendation_vllm_qwen14b_official.md  hardware_recommendation_vllm_qwen32b_official.md  hardware_recommendation_vllm_qwen4b.md  hardware_recommendation_vllm_qwen4b_official.md  result_counts.csv
prompts/: agent_workflow_tasks.jsonl  coding_tasks.jsonl  function_calling_tasks.jsonl  long_context_tasks.jsonl  rag_tasks.jsonl  simple_tasks.jsonl
scripts/: run_a100_baseline.sh  run_h200_long_context.sh  setup_runpod.sh
servers/: health_check.sh  start_sglang.sh  start_vllm.sh  start_vllm_yarn_131k.sh  stop_servers.sh
src/runpod_inference_lab/: __init__.py
tests/: test_concurrency_runner.py  test_deep_analysis.py  test_evaluators.py  test_io.py  test_llm_client_contract.py  test_reports.py  test_result_schema.py  test_scripts.py  test_settings.py
(+32 files in other folders)
