[project]
name = "llm-inference-lab"
version = "0.1.0"
description = "A RunPod-first lab for learning and benchmarking OpenAI-compatible LLM inference."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Pranays676" }]
dependencies = [
    "httpx>=0.27.0",
    "matplotlib>=3.9.0",
    "numpy>=1.26.0",
    "openai>=1.55.0",
    "pandas>=2.2.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
    "rich>=13.7.0",
    "tabulate>=0.9.0",
    "tiktoken>=0.7.0",
    "typer>=0.12.0",
]

[project.scripts]
lab-single = "runpod_inference_lab.runners.single_prompt:app"
lab-batch = "runpod_inference_lab.runners.batch_prompts:app"
lab-concurrency = "runpod_inference_lab.runners.concurrency:app"
lab-agent-workflow = "runpod_inference_lab.runners.agent_workflow:app"
lab-agent-concurrent = "runpod_inference_lab.runners.agent_concurrent:app"
lab-long-context = "runpod_inference_lab.runners.long_context:app"
lab-summarize = "runpod_inference_lab.reports.summarize_results:app"
lab-report = "runpod_inference_lab.reports.generate_markdown_report:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/runpod_inference_lab"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
